<resources>
    <string name="app_name">Monitory</string>
    <string name="label_text_welcome">Monitory Membantu Anda Mengontrol HP Anak</string>
    <string name="label_text_family_code">Kode Keluarga</string>
    <string name="label_text_insert_family_code">Ketikkan kode keluarga yang Ayah Bunda miliki disini</string>
    <string name="label_text_family_code_missing">Belum punya kode keluarga?</string>
    <string name="label_text_family_code_policy">Dengan menekan tombol masuk berarti Anda menyetujui <b>Ketentuan Pengguna</b> dan <b>Kebijakan Data</b> kami</string>
    <string name="label_text_nick_name">Nama Panggilan Kamu</string>
    <string name="label_text_age">Umur Kamu</string>
    <string name="label_hint_nick_name">Contoh : Budi</string>
    <string name="label_hint_age">Contoh : 12</string>
    <string name="label_button_start">Mulai</string>
    <string name="label_button_enter">Masuk</string>
    <string name="label_button_continue">Selanjutnya</string>
    <string name="label_button_ok">Oke</string>
    <string name="label_button_buy_family_code">Beli Kode Keluarga Disini</string>
</resources>
