<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".BiodataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/label_text_nick_name"
            android:textColor="#000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/inNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:hint="@string/label_hint_nick_name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/label_text_age"
            android:textColor="#000"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/inAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/rubik_regular"
            android:hint="@string/label_hint_age"
            android:inputType="number"
            android:maxLines="1"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/bContinue"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_button_yellow"
        android:fontFamily="@font/nunito_bold"
        android:onClick="goToMain"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:text="@string/label_button_continue"
        android:textAllCaps="false"
        android:textSize="16sp" />

</RelativeLayout>