<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/label_text_family_code"
            android:textColor="#000"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/label_text_insert_family_code"
            android:textColor="#000"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_input"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center"
            android:inputType="text"
            android:maxLines="1"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/rubik_regular"
            android:gravity="center"
            android:text="@string/label_text_family_code_policy"
            android:textColor="#000"
            android:textSize="12sp" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/bEnter"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/bg_button_yellow"
            android:fontFamily="@font/nunito_bold"
            android:onClick="goToBiodata"
            android:text="@string/label_button_enter"
            android:textAllCaps="false"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#babb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/label_text_family_code_missing"
            android:textColor="#000"
            android:textSize="16sp" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/bg_button_purple"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/label_button_buy_family_code"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>